markup html up til form

--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Sign Up Form</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
+    <main>
+        <aside class="image-sidebar">
+            <figure>
+                <img src="./image/robin-van-geenen-lambo.jpg" width="500rem" alt="backview of lamborghini">
+                <figcaption>Photo by <a href="https://unsplash.com/@robinvangeenen">Robin Van Geenen</a> on <a
+                        href="https://unsplash.com">Unsplash</a>.
+                </figcaption>
+            </figure>
+            <div class="logo-container">
+                <img src="./image/odin-lined.png" alt="logo of The Odin Project">
+                <span>ODIN</span>
+            </div>
+        </aside>
+        <section class="content">
+            <div class="description">
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize
+                    your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <form action="#" method="POST"></form>
+        </section>
+    </main>
 </body>
 
 </html>
