--- a/index.html
+++ b/index.html
@@ -31,7 +31,43 @@
                     your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
-            <form action="#" method="POST"></form>
+            <form action="#" method="POST">
+                <fieldset>
+                    <legend>Let's do this!</legend>
+                    <div>
+                        <div>
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="first-name">
+                        </div>
+                        <div>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name" name="last-name">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email">
+                        </div>
+                        <div>
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="tel" name="phone" id="phone">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <label for="pwd">PASSWORD</label>
+                            <input type="password" id="pwd" name="pwd">
+                        </div>
+                        <div>
+                            <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirm-pwd" id="confirm-pwd">
+                        </div>
+                    </div>
+                </fieldset>
+                <button type="submit">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </form>
         </section>
     </main>
 </body>
