--- a/index.html
+++ b/index.html
@@ -11,65 +11,62 @@
 </head>
 
 <body>
-    <main>
-        <aside class="image-sidebar">
-            <figure>
-                <img src="./image/robin-van-geenen-lambo.jpg" width="500rem" alt="backview of lamborghini">
-                <figcaption>Photo by <a href="https://unsplash.com/@robinvangeenen">Robin Van Geenen</a> on <a
-                        href="https://unsplash.com">Unsplash</a>.
-                </figcaption>
-            </figure>
-            <div class="logo-container">
-                <img src="./image/odin-lined.png" alt="logo of The Odin Project">
-                <span>ODIN</span>
+    <aside class="image-sidebar">
+        <div class="logo-container">
+            <img class="logo" src="./image/odin-lined.png" alt="logo of The Odin Project">
+            <span>ODIN CARS</span>
+
+        </div>
+        <p class="img-credit">Photo by <a href="https://unsplash.com/@robinvangeenen">Robin Van Geenen</a> on <a
+                href="https://unsplash.com">Unsplash</a>.
+        </p>
+    </aside>
+    <main class="content">
+        <div class="description">
+            <p>This is not a real online service! You know you need something like this in your life to help you
+                realize
+                your deepest dreams.<br>Sign up <em>now</em> to get started.</p>
+            <p>You <em>know</em> you want to.</p>
+        </div>
+        <form action="#" method="POST">
+            <div>
+                <p>Let's do this!</p>
+                <div>
+                    <div>
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name">
+                    </div>
+                    <div>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div>
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" name="phone" id="phone">
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <label for="pwd">PASSWORD</label>
+                        <input type="password" id="pwd" name="pwd">
+                    </div>
+                    <div>
+                        <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                        <input type="password" name="confirm-pwd" id="confirm-pwd">
+                    </div>
+                </div>
             </div>
-        </aside>
-        <section class="content">
-            <div class="description">
-                <p>This is not a real online service! You know you need something like this in your life to help you
-                    realize
-                    your deepest dreams. Sign up <em>now</em> to get started.</p>
-                <p>You <em>know</em> you want to.</p>
-            </div>
-            <form action="#" method="POST">
-                <fieldset>
-                    <legend>Let's do this!</legend>
-                    <div>
-                        <div>
-                            <label for="first-name">FIRST NAME</label>
-                            <input type="text" id="first-name" name="first-name">
-                        </div>
-                        <div>
-                            <label for="last-name">LAST NAME</label>
-                            <input type="text" id="last-name" name="last-name">
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email">
-                        </div>
-                        <div>
-                            <label for="phone">PHONE NUMBER</label>
-                            <input type="tel" name="phone" id="phone">
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <label for="pwd">PASSWORD</label>
-                            <input type="password" id="pwd" name="pwd">
-                        </div>
-                        <div>
-                            <label for="confirm-pwd">CONFIRM PASSWORD</label>
-                            <input type="password" name="confirm-pwd" id="confirm-pwd">
-                        </div>
-                    </div>
-                </fieldset>
-                <button type="submit">Create Account</button>
-                <p>Already have an account? <a href="#">Log in</a></p>
-            </form>
-        </section>
+            <button type="submit">Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </form>
     </main>
 </body>
+
 
 </html>
