adjust mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <aside class="image-sidebar">
         <div class="logo-container">
             <img class="logo" src="./image/odin-lined.png" alt="logo of The Odin Project">
-            <span>ODIN CARS</span>
+            <h1>ODIN CARS</h1>
 
         </div>
-        <p class="img-credit">Photo by <a href="https://unsplash.com/@robinvangeenen">Robin Van Geenen</a> on <a
+        <small class="img-credit">Photo by <a href="https://unsplash.com/@robinvangeenen">Robin Van Geenen</a> on <a
                 href="https://unsplash.com">Unsplash</a>.
-        </p>
+        </small>
     </aside>
     <main class="content">
         <div class="description">
@@ -31,7 +31,7 @@
         <form action="#" method="POST">
             <div>
                 <p>Let's do this!</p>
-                <div>
+                <div class="form-row">
                     <div>
                         <label for="first-name">FIRST NAME</label>
                         <input type="text" id="first-name" name="first-name">
@@ -41,7 +41,7 @@
                         <input type="text" id="last-name" name="last-name">
                     </div>
                 </div>
-                <div>
+                <div class="form-row">
                     <div>
                         <label for="email">EMAIL</label>
                         <input type="email" id="email" name="email">
@@ -51,7 +51,7 @@
                         <input type="tel" name="phone" id="phone">
                     </div>
                 </div>
-                <div>
+                <div class="form-row">
                     <div>
                         <label for="pwd">PASSWORD</label>
                         <input type="password" id="pwd" name="pwd">
